# Portfolio-Optimizer

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  optimize.ipynb  pyproject.toml  run.sh
data/: btc-1y-1d.csv  btc-5y-1d  btc-5y-1d.csv
data/portfolio/: A.csv  AAL.csv  AAPL.csv  ABBV.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AFL.csv  AIG.csv  AJG.csv  ALLE.csv  AMAT.csv  AMD.csv  AMGN.csv  AMT.csv  AMZN.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APTV.csv  AVGO.csv  AVY.csv  AXP.csv  AZO.csv  BAC.csv  BBWI.csv  BBY.csv  BDX.csv  BEN.csv  BIIB.csv  BK.csv  BKNG.csv  (+214 more)
data/portfolio/['AAPL', 'GOOGL', 'TSLA', 'PLTR', 'NVDA']p=5y,i=1d/: AAPL.csv  GOOGL.csv  NVDA.csv  PLTR.csv  TSLA.csv
data/portfolio/['BTC-USD', 'ETH-USD', 'SOL-USD', 'XRP-USD', 'DOGE-USD']p=5y,i=1d/: BTC-USD.csv  DOGE-USD.csv  ETH-USD.csv  SOL-USD.csv  XRP-USD.csv
data/portfolio/sp500p=5y,i=1d/: A.csv  AAL.csv  AAPL.csv  ABBV.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AFL.csv  AIG.csv  AJG.csv  ALLE.csv  AMAT.csv  AMD.csv  AMGN.csv  AMT.csv  AMZN.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APTV.csv  AVGO.csv  AVY.csv  (+221 more)
db/: initialize_db.py
db/init/: 01_schema.sql
db/seed/: download.py  scrape.py  tickers.py
src/: Backtest.py  Processes.py  TimeSeriesAnalyser.py  logger.py  position.py
src/app/: _utils.py  database_engine.py  main.py
src/portfolioOptimizer/: PortfolioOptimizer.py
src/strategy/: Strategy.py  strategies.py
src/visualizers/: Visualizer.py
(+12 files in other folders)
